raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Vector4 type
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
// Matrix type (OpenGL style 4x4 - right handed, column major)
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
// Audio stream type
// NOTE: Useful to create custom audio streams not bound to a specific file
typedef struct AudioStream
{
    unsigned int sampleRate; // Frequency (samples per second)
    unsigned int sampleSize; // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;   // Number of channels (1-mono, 2-stereo)

    void *audioBuffer; // Pointer to internal data used by the audio system.

    int format;              // Audio format specifier
    unsigned int source;     // Audio source id
    unsigned int buffers[2]; // Audio buffers (double buffering)
} AudioStream;
    RLAPI bool IsAudioStreamPlaying(AudioStream stream);                                                        // Check if audio stream is playing
    RLAPI void StopAudioStream(AudioStream stream);                                                             // Stop audio stream
    RLAPI void SetAudioStreamVolume(AudioStream stream, float volume);                                          // Set volume for audio stream (1.0 is max level)
    RLAPI void SetAudioStreamPitch(AudioStream stream, float pitch);                                            // Set pitch for audio stream (1.0 is base level)