src/raylib.rs


    pub fn IsAudioStreamPlaying(stream: AudioStream) -> bool;

    pub fn StopAudioStream(stream: AudioStream);

    pub fn SetAudioStreamVolume(stream: AudioStream, volume: f32);

    pub fn SetAudioStreamPitch(stream: AudioStream, pitch: f32);
}

#[cfg(test)]
mod tests {
    #![allow(non_snake_case)]
    use raylib::*;

    #[test]
    fn bindgen_test_layout_Vector2() {
        assert_eq!(
            ::std::mem::size_of::<Vector2>(),
            8usize,
            concat!("Size of: ", stringify!(Vector2))
        );
        assert_eq!(
            ::std::mem::align_of::<Vector2>(),
            4usize,
            concat!("Alignment of ", stringify!(Vector2))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector2>())).x as *const _ as usize },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector2),
                "::",
                stringify!(x)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector2>())).y as *const _ as usize },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector2),
                "::",
                stringify!(y)
            )
        );
    }

    #[test]
    fn bindgen_test_layout_Vector3() {
        assert_eq!(
            ::std::mem::size_of::<Vector3>(),
            12usize,
            concat!("Size of: ", stringify!(Vector3))
        );
        assert_eq!(
            ::std::mem::align_of::<Vector3>(),
            4usize,
            concat!("Alignment of ", stringify!(Vector3))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector3>())).x as *const _ as usize },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector3),
                "::",
                stringify!(x)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector3>())).y as *const _ as usize },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector3),
                "::",
                stringify!(y)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector3>())).z as *const _ as usize },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector3),
                "::",
                stringify!(z)
            )
        );
    }

    #[test]
    fn bindgen_test_layout_Vector4() {
        assert_eq!(
            ::std::mem::size_of::<Vector4>(),
            16usize,
            concat!("Size of: ", stringify!(Vector4))
        );
        assert_eq!(
            ::std::mem::align_of::<Vector4>(),
            4usize,
            concat!("Alignment of ", stringify!(Vector4))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector4>())).x as *const _ as usize },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector4),
                "::",
                stringify!(x)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector4>())).y as *const _ as usize },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector4),
                "::",
                stringify!(y)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector4>())).z as *const _ as usize },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector4),
                "::",
                stringify!(z)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Vector4>())).w as *const _ as usize },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(Vector4),
                "::",
                stringify!(w)
            )
        );
    }

    #[test]
    fn bindgen_test_layout_Matrix() {
        assert_eq!(
            ::std::mem::size_of::<Matrix>(),
            64usize,
            concat!("Size of: ", stringify!(Matrix))
        );
        assert_eq!(
            ::std::mem::align_of::<Matrix>(),
            4usize,
            concat!("Alignment of ", stringify!(Matrix))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m0 as *const _ as usize },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m0)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m4 as *const _ as usize },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m4)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m8 as *const _ as usize },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m8)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m12 as *const _ as usize },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m12)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m1 as *const _ as usize },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m1)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m5 as *const _ as usize },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m5)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m9 as *const _ as usize },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m9)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m13 as *const _ as usize },
            28usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m13)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m2 as *const _ as usize },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m2)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m6 as *const _ as usize },
            36usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m6)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m10 as *const _ as usize },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m10)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m14 as *const _ as usize },
            44usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m14)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m3 as *const _ as usize },
            48usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m3)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m7 as *const _ as usize },
            52usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m7)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m11 as *const _ as usize },
            56usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m11)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Matrix>())).m15 as *const _ as usize },
            60usize,
            concat!(
                "Offset of field: ",
                stringify!(Matrix),
                "::",
                stringify!(m15)
            )
        );
    }

    #[test]
    fn bindgen_test_layout_Color() {
        assert_eq!(
            ::std::mem::size_of::<Color>(),
            4usize,
            concat!("Size of: ", stringify!(Color))
        );
        assert_eq!(
            ::std::mem::align_of::<Color>(),
            1usize,
            concat!("Alignment of ", stringify!(Color))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Color>())).r as *const _ as usize },
            0usize,
            concat!("Offset of field: ", stringify!(Color), "::", stringify!(r))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Color>())).g as *const _ as usize },
            1usize,
            concat!("Offset of field: ", stringify!(Color), "::", stringify!(g))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Color>())).b as *const _ as usize },
            2usize,
            concat!("Offset of field: ", stringify!(Color), "::", stringify!(b))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Color>())).a as *const _ as usize },
            3usize,
            concat!("Offset of field: ", stringify!(Color), "::", stringify!(a))
        );
    }

    #[test]
    fn bindgen_test_layout_Rectangle() {
        assert_eq!(
            ::std::mem::size_of::<Rectangle>(),
            16usize,
            concat!("Size of: ", stringify!(Rectangle))
        );
        assert_eq!(
            ::std::mem::align_of::<Rectangle>(),
            4usize,
            concat!("Alignment of ", stringify!(Rectangle))
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Rectangle>())).x as *const _ as usize },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Rectangle),
                "::",
                stringify!(x)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Rectangle>())).y as *const _ as usize },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(Rectangle),
                "::",
                stringify!(y)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Rectangle>())).width as *const _ as usize },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(Rectangle),
                "::",
                stringify!(width)
            )
        );
        assert_eq!(
            unsafe { &(*(::std::ptr::null::<Rectangle>())).height as *const _ as usize },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(Rectangle),
                "::",
                stringify!(height)
            )
        );
    }
